--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<maven-eclipse-plugin>2.9</maven-eclipse-plugin>
 		<maven-resources-plugin>2.6</maven-resources-plugin>
 		<maven-compiler-plugin>2.5.1</maven-compiler-plugin>
-		<mongo-java-driver.version>3.0.3</mongo-java-driver.version>
+		<mongo-java-driver.version>3.0.4</mongo-java-driver.version>
 		<spring.version>4.1.7.RELEASE</spring.version>
 		<spring-data-mongodb>1.8.0.RELEASE</spring-data-mongodb>
 	</properties>
@@ -131,6 +131,30 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.maven.plugins</groupId> -->
+			<!-- <artifactId>maven-javadoc-plugin</artifactId> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <id>attach-javadocs</id> -->
+			<!-- <goals> -->
+			<!-- <goal>jar</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin}</version>
 				<configuration>
@@ -152,25 +176,24 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
 				<configuration>
-					<printSummary>true</printSummary>
+					<printSummary>false</printSummary>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
+					<skipTests>false</skipTests>
+					<!-- <excludes> -->
+					<!-- <exclude>**/*_ABC_*</exclude> -->
+					<!-- </excludes> -->
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.7</version>
-			</plugin>
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.maven.plugins</groupId> -->
+			<!-- <artifactId>maven-assembly-plugin</artifactId> -->
+			<!-- <version>2.3</version> -->
+			<!-- <configuration> -->
+			<!-- <descriptorRefs> -->
+			<!-- <descriptorRef>jar-with-dependencies</descriptorRef> -->
+			<!-- </descriptorRefs> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 			<!-- IDE -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -181,9 +204,9 @@
 					<downloadSources>true</downloadSources>
 					<downloadJavadocs>false</downloadJavadocs>
 					<wtpversion>2.0</wtpversion>
-					<additionalProjectnatures>
-						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
-					</additionalProjectnatures>
+					<!-- <additionalProjectnatures> -->
+					<!-- <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature> -->
+					<!-- </additionalProjectnatures> -->
 				</configuration>
 			</plugin>
 		</plugins>
