--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<name>smb</name>
-	<url>http://maven.apache.org</url>
+	<url>https://github.com/oalles/smb</url>
 
 	<properties>
 		<java.version>1.8</java.version>
