--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
 		<maven-eclipse-plugin>2.9</maven-eclipse-plugin>
 		<maven-resources-plugin>2.6</maven-resources-plugin>
 		<maven-compiler-plugin>2.5.1</maven-compiler-plugin>
-		<mongo-java-driver.version>3.0.4</mongo-java-driver.version>
-		<spring.version>4.1.7.RELEASE</spring.version>
-		<spring-data-mongodb>1.8.0.RELEASE</spring-data-mongodb>
+
+		<spring.version>4.1.9.RELEASE</spring.version>
+		<spring-data-mongodb>1.9.0.BUILD-SNAPSHOT</spring-data-mongodb>
+
 	</properties>
 	<repositories>
 		<repository>
@@ -64,12 +65,6 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>${mongo-java-driver.version}</version>
-		</dependency>
-
 		<!-- Spring dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -101,31 +96,6 @@
 			<version>${junit-version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>log4j</groupId> -->
-		<!-- <artifactId>log4j</artifactId> -->
-		<!-- <version>${log4j.version}</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.slf4j</groupId> -->
-		<!-- <artifactId>slf4j-api</artifactId> -->
-		<!-- <version>${slf4j.version}</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.slf4j</groupId> -->
-		<!-- <artifactId>slf4j-log4j12</artifactId> -->
-		<!-- <version>${slf4j.version}</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.slf4j</groupId> -->
-		<!-- <artifactId>jcl-over-slf4j</artifactId> -->
-		<!-- <version>${slf4j.version}</version> -->
-		<!-- </dependency> -->
-
-
-		<!-- TEST DEPENDENCIES -->
-		<!-- SPRING BOOT -->
-
 	</dependencies>
 	<build>
 		<plugins>
