--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -81,6 +82,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- SPRINGDATAMONGODB -->
@@ -88,6 +90,7 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>${spring-data-mongodb}</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- General dependencies for standard applications -->
 		<dependency>
