--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>es.neivi</groupId>
+	<groupId>es.omarall</groupId>
 	<artifactId>smb</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>smb</name>
+	<name>Simple Message Broadcaster</name>
 	<url>https://github.com/oalles/smb</url>
 
 	<properties>
@@ -60,9 +60,9 @@
 	</pluginRepositories>
 	<dependencies>
 		<dependency>
-			<groupId>es.neivi</groupId>
+			<groupId>es.omarall</groupId>
 			<artifactId>mtc</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Spring dependencies -->
@@ -181,4 +181,8 @@
 			</plugin>
 		</plugins>
 	</build>
+	<organization>
+		<name>Omar Alles</name>
+		<url>https://omarall.es</url>
+	</organization>
 </project>
