--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -22,4 +22,4 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 # LOGGERS - LoggerFactory.getLogger(*.class);
-log4j.logger.es.neivi=TRACE
+log4j.logger.es.omarall=TRACE
